# Parametric-Furniture-Generator

./: .gitignore  API_REFERENCE.md  README.md  README.zh.md  app.py  config.py  fix_dxf.py  gen.py  pyproject.toml  server.py
.claude/: settings.local.json
builders/: __init__.py  desk_builder.py  furniture_builder.py
cli/: __init__.py  build.py
exporters/: urdf_writer.py
models/: __init__.py  pose.py  template.py
output/: short_section.stl  test_holes.step  test_holes.stl
output/0dc2e83a/basic_desk/meshes/visual/: beam_back.step  beam_front.step  beam_front.stl  beam_left.step  beam_right.step  beam_right.stl  leg_back_left.step  leg_back_right.step  leg_front_left.step  leg_front_right.step  leg_front_right.stl  tabletop.step  tabletop.stl
output/351a03eb/basic_desk/meshes/visual/: beam_back.step  beam_back.stl  beam_front.step  beam_left.step  beam_left.stl  (+7 more)
output/basic_desk/: basic_desk.urdf
output/basic_desk/cad/: tabletop.step
output/basic_desk/meshes/collision/: tabletop.stl
parametric_furniture/: __init__.py  __main__.py
parametric_furniture/builders/: desk_builder.py  furniture_builder.py
parametric_furniture/cli/: __init__.py  build.py
parametric_furniture/exporters/: __init__.py  urdf_writer.py
parametric_furniture/models/: furniture.py  parameter.py
parametric_furniture/solvers/: desk_solver.py  furniture_solver.py
solvers/: __init__.py  desk_solver.py  furniture_solver.py
templates/desk/: basic.yaml
tests/: __init__.py  conftest.py  test_desk_builder.py  test_desk_solver.py  test_template_loader.py  test_urdf_writer.py
