[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parametric-furniture"
version = "0.1.0"
description = "Parametric Furniture Generator — declarative furniture templates to URDF."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Parametric Furniture Team"}
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "ezdxf>=1.3.0",
    "lxml>=5.0.0",
]

[project.scripts]
furniture = "parametric_furniture.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["parametric_furniture", "parametric_furniture.*"]

[tool.setuptools.package-data]
parametric_furniture = ["../templates/**/*.yaml", "../library/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
